* bulk, java9+